adjust project base
add product
add transaction
