# docs/swagger.json
@@ -5,89 +5,8 @@
     },
     "paths": {
         "/api/v1/company": {
-            "get": {
-                "security": [
-                    {
-                        "oauth2": [
-                            "identity_api"
-                        ]
-                    }
-                ],
-                "description": "GetAllCompanies gets all repository information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Company"
-                ],
-                "summary": "GetAllCompanies gets all repository information",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "security": [
-                    {
-                        "oauth2": [
-                            "identity_api"
-                        ]
-                    }
-                ],
-                "description": "UpdateCompany updates a company by company id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Company"
-                ],
-                "summary": "UpdateCompany updates a company by company id",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "Not Acceptable",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    }
-                }
-            },
             "post": {
-                "security": [
-                    {
-                        "oauth2": [
-                            "identity_api"
-                        ]
-                    }
-                ],
-                "description": "AddNewCompany adds new company",
+                "description": "Create a new company with the provided request data",
                 "consumes": [
                     "application/json"
                 ],
@@ -95,129 +14,31 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Company"
+                    "companies"
                 ],
-                "summary": "AddNewCompany adds new company",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "Not Acceptable",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/company/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "oauth2": [
-                            "identity_api"
-                        ]
-                    }
-                ],
-                "description": "GetSingleCompany Gets single company information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Company"
-                ],
-                "summary": "GetSingleCompany Gets single company information",
+                "summary": "Create a new company",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "id UUID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Request body containing company details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateCompanyRequestDTO"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Response"
+                            "$ref": "#/definitions/utils.Response"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "Not Acceptable",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "oauth2": [
-                            "identity_api"
-                        ]
-                    }
-                ],
-                "description": "DeleteCompany deletes the company from db",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Company"
-                ],
-                "summary": "DeleteCompany deletes the company from db",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "406": {
-                        "description": "Not Acceptable",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/entity.ErrorResponse"
+                            "$ref": "#/definitions/utils.ErrorResponse"
                         }
                     }
                 }
@@ -225,7 +46,21 @@
         }
     },
     "definitions": {
-        "entity.ErrorResponse": {
+        "models.CreateCompanyRequestDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "website": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -235,13 +70,7 @@
                 "instance": {
                     "type": "string"
                 },
-                "message": {
-                    "type": "string"
-                },
                 "status": {
-                    "type": "boolean"
-                },
-                "title": {
                     "type": "string"
                 },
                 "traceId": {
@@ -249,17 +78,14 @@
                 }
             }
         },
-        "entity.Response": {
+        "utils.Response": {
             "type": "object",
             "properties": {
-                "body": {},
                 "code": {
                     "type": "integer"
                 },
-                "message": {
-                    "type": "string"
-                },
-                "title": {
+                "data": {},
+                "status": {
                     "type": "string"
                 }
             }
